fixed content hiding behind navbar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,9 +24,8 @@
 /* info section */
 
 .info {
-    margin-top: 8em;
-    margin-bottom: 8em;
-    /* border-bottom: 1px solid #c1c1c1; */
+    padding-top: 6em;
+    padding-bottom: 6em;
 }
 
 .info-box {
@@ -39,7 +38,7 @@
 
 .subscripton {
     border-top: 1px solid #c1c1c1;
-    padding-top: 5em;
+    padding-top: 5.5em;
 }
 
 .subscripton > h4 {
